derive/tests/ui/attr-invalid-name-values.stderr
error: Invalid attribute parameter(s): 'Xname'. Expected 'name, returns'
 --> $DIR/attr-invalid-name-values.rs:7:2
  |
7 |       /// Returns a protocol version
  |  _____^
8 | |     #[rpc(Xname = "protocolVersion")]
9 | |     fn protocol_version(&self) -> Result<String>;
  | |_________________________________________________^
